Sprint040|ALPHA-749|Fix home slider, fix spacing and other sliders and clear legacy code

--- a/app/styles/components/landing-page/banners/_index.scss
+++ b/app/styles/components/landing-page/banners/_index.scss
@@ -1,5 +1,9 @@
 .org-component-banners {
-  margin: 0 0 3rem;
+  margin: 0 0 6.5rem;
+
+  @include lg {
+    margin: 0 0 4rem;
+  }
 }
 
 .atm-banners-dots {
